Change toggle btn issue-overlapping

--- a/src/App.css
+++ b/src/App.css
@@ -26,9 +26,6 @@ button {
   cursor: pointer;
   width: 50px;
   height: 50px;
-  background-color: rgba(0, 0, 0, 0.2);
-  padding: 5px;
-  border-radius: 50%;
+  background-color: transparent;
   border: none;
-  box-shadow: 2px 2px 1px 1px rgba(0, 0, 0, 0.4);
 }
